fix(radio,checkbox): fix checkbox and radio aligin (#692)
fix the problem that checkbox and radio doesnot align with text in table

--- a/packages/components/radio/style/index.less
+++ b/packages/components/radio/style/index.less
@@ -12,6 +12,13 @@
   color: @radio-color;
   cursor: pointer;
 
+  &:not(&-button)::after {
+    display: inline-block;
+    width: 0;
+    overflow: hidden;
+    content: "\a0";
+  }
+
   &-input {
     position: relative;
     display: inline-block;
